🐛  Fix gap between carousel and tap in Tablet
40px

--- a/styles/components/_product-carousel.scss
+++ b/styles/components/_product-carousel.scss
@@ -52,6 +52,7 @@
   @include responsive(T) {
     $button-size-md: 56px;
     @include column-flexbox(start, start);
+    margin-bottom: 40px;
 
     &-thumbnail {
       position: static;
